Projet GL/Projet_GL/src/test/deca/context/valid/increment2/bool-and.deca
// boolean implementation

// Historique : cree le 10/01/2023

{
    boolean a = true && false;
}