Projet GL/Projet_GL/src/test/deca/context/invalid/increment2/bool-comp-float.deca
// Test bool == float

// Historique : cree le 11/01/2023

{
    float a = 3;

    boolean b = true;

    b = b == a;
}